# uartsync

./: Makefile  README.md  install.sh  pyproject.toml
uartsync/: capture.py  cli.py  constants.py  devicewatch.py  launcher.py  scan.py  scoring.py
